--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
             border: none;
             border-radius: 5px;
         }
-        
-        
+        .titulo{
+            color: var(--color-text);
+        }
 
     </style>
 </head>
