--- a/index.html
+++ b/index.html
@@ -88,8 +88,30 @@
             border: none;
             border-radius: 5px;
         }
-        .titulo{
+        .titulo{ /* CSS da parte de entrada do site */
             color: var(--color-text);
+            font-family: Inter;
+            text-align: center;
+            justify-content: left;
+        }
+
+        .rodape{ /* CSS do rodapé */
+            background-color: var(--color-bgh);
+            font-family: Inter;
+            margin-top: 100px;
+            width: 100%;
+            height: 100px;
+            position: fixed; /* fixa o rodapé na parte inferior da página */
+            bottom: 0;
+            left: 0;
+            color: var(--color-text);
+        }
+
+        .rodape p{ /* CSS do texto do rodapé */
+            color: var(--color-text);
+            font-size: 10px;
+            text-align: center;
+            padding: 80px 0px;
         }
 
     </style>
@@ -111,8 +133,13 @@
     </div>
 
     <div class="titulo" id="titulo">
-        <h1 style="color:var(--color-text); font-family: Inter" >Transformo desafios em conquistas<br>na fala e linguagem:<br> com ciência, brincadeira e amor.</h1>
+        <h1>Transformo desafios em conquistas<br>na fala e linguagem:<br>com ciência, brincadeira e amor.</h1>
 
+    </div>
+    <div class="rodape" id="rodape">
+        <footer>
+            <p>Rua Marechal Deodoro da Fonseca 1917, São José do Rio Preto - SP.</p>
+        </footer>
     </div>
    
 </body>
