--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Transformo desafios em <br>conquistas na fala e linguagem:<br>com ciência, brincadeira e amor.</h1>
                 <h2 class="subtitulo" id="subtitulo"><i>Atendimento ao público infantil presencial, em São José do Rio Preto e online para outras regiões.*<br></i></h2>
                 <div class="contato_inicio" id="contato_inicio">
-                <button>Entre em contato</button>
+                <button class="btnzap" id="btnzap">Entre em contato</button>
                 </div>
             </div>
 
