Finalização do rodapé
Centralizei os textos, deixei responsivo, adicionei animação + consertei a cor do botão do zap.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <!--Opções do cabeçalho-->
                     <div class="navigation_header"> 
                         <button class="btnheader"><a href="#">Home</a></button>
-                        <button class="btnheader">Sobre</button>
-                        <button class="btnheader"><a href="#">Benefícios</a></button>
                         <button class="btnheader" id="scrollButtonserv"><a href="#">Serviços</a></button>
+                        <button class="btnheader"><a href="#">Benefícios</a></button>
+                        <button class="btnheader"><a href="#">Sobre</a></button>
                         <button class="btncontato"><a href="#">Contato</a></button>
                     </div>
             </div>
@@ -42,23 +42,34 @@
             <section id="sectionserv">
                 <h1>Serviços teste</h1>
             </section>
-            
-            <div class="rodape" id="rodape">
-                <footer>
-                    <div class="endereco" id="endereco">
-                    <p>Rua Marechal Deodoro da Fonseca 1917 -<br>Clínica Vita e Salute, São José do Rio Preto- SP, CEP: 15025-070</p>
-                    </div>
-                    <div class="contato" id="contato">
-                    <p><i class="fa-solid fa-phone"></i>(17) 99618-5992</p>
-                    <p><i class="fa-regular fa-envelope"></i> fonoarielirigueiro@gmail.com</p>
-                    </div>
-                    <div class="icones" id="icones">
-                    <a href="https://www.instagram.com/fonoarielirigueiro/" target="_blank" rel="noopener noreferrer"><i class= "fa-brands fa-instagram"></i></a>
-                    <i class="fa-brands fa-whatsapp"></i> 
-                    </div>
-                </footer>
+        <div class="rodape" id="rodape">
+        <footer>
+            <div class="rodape-container">
+            <!-- LADO ESQUERDO -->
+            <div class="contato" id="contato">
+                <p style="font-family: Inter;">Contato:</p>
+                <p><i class="fa-solid fa-phone"></i> (17) 99618-5992</p>
+                <p><i class="fa-regular fa-envelope"></i> fonoarielirigueiro@gmail.com</p>
+
+                <div class="icones" id="icones">
+                <a href="https://www.instagram.com/fonoarielirigueiro/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+                </div>
             </div>
-        
+
+            <!-- LADO DIREITO -->
+            <div class="endereco" id="endereco" style="margin-left: 40rem; margin-right: -105rem;">
+                <p>Rua Marechal Deodoro da Fonseca, 1917</p>
+                <p>Clínica Vita e Salute, São José do Rio Preto - SP, CEP: 15025-070</p>
+            </div>
+            </div>
+        </footer>
+        </div>
+
 
 
 
