--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="titulo" id="titulo">
         <h1>Transformo desafios em <br>conquistas na fala e linguagem:<br>com ciência, brincadeira e amor.</h1>
-        <h2 class="subtitulo" id="subtitulo"><i>Atendimento ao público infantil presencial, em São José do Rio Preto e online para outras regiões.*<br></i></h2>
+        <h2 class="subtitulo" id="subtitulo"><i><b>Atendimento ao público infantil presencial em São José do Rio Preto e online para outras regiões.*<br></b></i></h2>
         <div class="contato_inicio" id="contato_inicio">
         <a class="btn btn-tertiary" href="https://wa.me/5517996185992?text=Oi%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20%F0%9F%A4%8D" target="_blank" rel="noopener noreferrer">Entre em contato</a>
         </div>
@@ -152,12 +152,12 @@
                     Minha prática é guiada por ciência, sensibilidade e parceria com a família, valorizando cada conquista no processo de comunicação da criança.
                     <br>
                     <br>
-                    DTTC (Dynamic Temporal and Tactile Cueing) <br>
+                    <b>DTTC (Dynamic Temporal and Tactile Cueing) <br>
                     ReST (Rapid Syllable Transition Treatment) <br>
                     DIR ® / Floortime™ <br>
                     PROMPT (Prompts for Restructuring Oral Muscular Phonetic Targets) <br>
                     PODD (Pragmatic Organisation Dynamic Display) <br>
-                    PECS (Picture Exchange Communication System).
+                    PECS (Picture Exchange Communication System).</b>
                 </p>
             </div>
             <img src="imagens/Arieli-15.jpg" alt="Foto profissional de Arieli" style="width: 490px; border-radius: 30px; margin-bottom: 60px;">
