--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="logo_header">
             <a href="index.html"><img src="imagens/logo.png" alt="logo"></a>
         </div>
+
 <!--Opções do cabeçalho-->
 <div class="navigation_header">
         <a class="btn btn-header" style="z-index:999" href="#sectionhome">Home</a>
@@ -97,72 +98,76 @@
     </div>
 </section>
 
+<!---BENEFÍCIOS-->
 <section id="beneficios">
     <div style="text-align: center; margin-top: 40px;">
         <p style="font-size: 30px; color: #5E99DC; font-family: 'Inter';">
             Por que escolher meu atendimento?
         </p>
-<!--organização das caixas-->
-<div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 50px; max-width: 1000px; margin: 100px auto;">
-<!--caixa 1-->
-<div class="caixa">
-    <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">
-        Abordagem individualizada e baseada em evidências
-    </p>
-    <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">
-        Cada criança é única. O plano terapêutico é construído de forma personalizada, com base em avaliações detalhadas e em métodos cientificamente comprovados.
-    </p>
-</div>
-<!--caixa 2-->
-<div class="caixa">
-    <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">
-        Olhar global para o desenvolvimento
-    </p>
-    <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">
-        Mais do que trabalhar a fala, o foco está em comunicar, interagir e se expressar. A linguagem é estimulada em contextos significativos, respeitando e as potencialidades de cada criança.
-    </p>
-</div>
-<!--caixa 3-->
-<div class="caixa">
-    <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">Parceria com a família</p>
-    <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">A família é parte essencial do processo terapêutico. São fornecidas orientações práticas, vídeos e devolutivas constantes, para que o progresso continue fora do consultório — no brincar, nas rotinas e nas relações.</p>
-</div>
-<!--caixa 4-->
-<div class="caixa">
-                    <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">Experiência em diferentes quadros clínicos e resultados comprovados</p>
-                    <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">Atuação especializada com crianças com atraso de linguagem, TEA, síndromes genéticas e transtornos dos sons da fala (fonológicos e motores), promovendo ganhos comunicativos e funcionais em diferentes perfis.</p>
-                </div>
-            </div>
-            <a class="btn btn-tertiary" href="https://wa.me/5517996185992?text=Oi%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20%F0%9F%A4%8D" target="_blank" rel="noopener noreferrer">Agende sua consulta</a>
-        </div>
-    </section>
-
-    <section id="sobre">
-        <div style="display: flex; gap: 30px; align-items: flex-start; padding-right: 60px;">
-            <div style="padding-left: 60px; padding-right: 0px">
-                <p style="margin: 0; font-size: 45px; color: #5E99DC; font-family: 'Inter';">Sobre</p>
-                <p style="padding-top: 20px; margin: 0; font-size: 25px; color: #5E99DC; font-family: 'Inter';">Quem é Arieli?</p>
-                <p style="line-height: 1.8; padding-top: 20px; font-size: 18px; color: #444444; font-family: 'Inter2'">
-                    Sou Arieli Rigueiro (CRFa 2-21263), fonoaudióloga graduada pela Universidade do Oeste Paulista (Unoeste) em 2019.
-                    Possuo especialização em Reabilitação Física pela Faculdade de Medicina de São José do Rio Preto (FAMERP) – 2022 e pós-graduação em Análise do Comportamento Aplicada ao Autismo e Deficiência Intelectual (ABA) pelo CBI of Miami – 2024.
-                    <br>
-                    Atuo com avaliação e intervenção fonoaudiológica em linguagem e fala, atendendo crianças com atraso de linguagem, TEA, síndromes genéticas e transtornos fonológicos e motores da fala.
-                    <br>
-                    <br>
-                    Minha prática é guiada por ciência, sensibilidade e parceria com a família, valorizando cada conquista no processo de comunicação da criança.
-                    <br>
-                    <br>
-                    <b>DTTC (Dynamic Temporal and Tactile Cueing) <br>
-                    ReST (Rapid Syllable Transition Treatment) <br>
-                    DIR ® / Floortime™ <br>
-                    PROMPT (Prompts for Restructuring Oral Muscular Phonetic Targets) <br>
-                    PODD (Pragmatic Organisation Dynamic Display) <br>
-                    PECS (Picture Exchange Communication System).</b>
+        <!--organização das caixas-->
+        <div class="beneficios-grid">
+            <!--caixa 1-->
+            <div class="caixa">
+                <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">
+                    Abordagem individualizada e baseada em evidências
+                </p>
+                <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">
+                    Cada criança é única. O plano terapêutico é construído de forma personalizada, com base em avaliações detalhadas e em métodos cientificamente comprovados.
                 </p>
             </div>
-            <img src="imagens/Arieli-15.jpg" alt="Foto profissional de Arieli" style="width: 490px; border-radius: 30px; margin-bottom: 60px;">
+            <!--caixa 2-->
+            <div class="caixa">
+                <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">
+                    Olhar global para o desenvolvimento
+                </p>
+                <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">
+                    Mais do que trabalhar a fala, o foco está em comunicar, interagir e se expressar. A linguagem é estimulada em contextos significativos, respeitando e as potencialidades de cada criança.
+                </p>
+            </div>
+            <!--caixa 3-->
+            <div class="caixa">
+                <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">Parceria com a família</p>
+                <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">A família é parte essencial do processo terapêutico. São fornecidas orientações práticas, vídeos e devolutivas constantes, para que o progresso continue fora do consultório — no brincar, nas rotinas e nas relações.</p>
+            </div>
+            <!--caixa 4-->
+            <div class="caixa">
+                <p style="font-size: 18px; color: #5E99DC; margin: auto; font-family: 'Inter'; margin-bottom: 15px;">Experiência em diferentes quadros clínicos e resultados comprovados</p>
+                <p style="color: var(--color-text2); font-family: 'Inter2'; font-size: 18px;">Atuação especializada com crianças com atraso de linguagem, TEA, síndromes genéticas e transtornos dos sons da fala (fonológicos e motores), promovendo ganhos comunicativos e funcionais em diferentes perfis.</p>
+            </div>
         </div>
-    </section>
+        <a class="btn btn-tertiary" href="https://wa.me/5517996185992?text=Oi%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20%F0%9F%A4%8D" target="_blank" rel="noopener noreferrer">Agende sua consulta</a>
+    </div>
+</section>
+
+<!---SOBRE-->
+<section id="sobre">
+    <div style="display: flex; gap: 30px; align-items: flex-start; padding-right: 60px;">
+        <div style="padding-left: 60px; padding-right: 0px">
+            <p style="margin: 0; font-size: 45px; color: #5E99DC; font-family: 'Inter';">Sobre</p>
+            <p style="padding-top: 20px; margin: 0; font-size: 25px; color: #5E99DC; font-family: 'Inter';">Quem é Arieli?</p>
+            <p style="line-height: 1.8; padding-top: 20px; font-size: 18px; color: #444444; font-family: 'Inter2'">
+                Sou Arieli Rigueiro (CRFa 2-21263), fonoaudióloga graduada pela Universidade do Oeste Paulista (Unoeste) em 2019.
+                Possuo especialização em Reabilitação Física pela Faculdade de Medicina de São José do Rio Preto (FAMERP) – 2022 e pós-graduação em Análise do Comportamento Aplicada ao Autismo e Deficiência Intelectual (ABA) pelo CBI of Miami – 2024.
+                <br>
+                Atuo com avaliação e intervenção fonoaudiológica em linguagem e fala, atendendo crianças com atraso de linguagem, TEA, síndromes genéticas e transtornos fonológicos e motores da fala.
+                <br>
+                <br>
+                Minha prática é guiada por ciência, sensibilidade e parceria com a família, valorizando cada conquista no processo de comunicação da criança.
+                <br>
+                <br>
+                <b>DTTC (Dynamic Temporal and Tactile Cueing) <br>
+                ReST (Rapid Syllable Transition Treatment) <br>
+                DIR ® / Floortime™ <br>
+                PROMPT (Prompts for Restructuring Oral Muscular Phonetic Targets) <br>
+                PODD (Pragmatic Organisation Dynamic Display) <br>
+                PECS (Picture Exchange Communication System).</b>
+            </p>
+        </div>
+        <img src="imagens/Arieli-15.jpg" alt="Foto profissional de Arieli" style="width: 490px; border-radius: 30px; margin-bottom: 60px;">
+    </div>
+</section>
+
+
     <footer class="rodape" id="footer">
             <div class="rodape-container">
             <!-- LADO ESQUERDO -->
@@ -184,7 +189,7 @@
             </div>
 
             <!-- LADO DIREITO -->
-            <div class="endereco" id="endereco" style="margin-left: 40rem; margin-right: -98rem;">
+            <div class="endereco" id="endereco">
                 <p>Rua Marechal Deodoro da Fonseca, 1917</p>
                 <p>Clínica Vita e Salute, São José do Rio Preto - SP, CEP: 15025-070</p>
             </div>
