--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="card">
             <div class="img">
                 <img src="imagens/lips.png">
-                <h1>Motricidade Orofacial</h1>
+                <h1>Motrocidade Orofacial</h1>
                 <div class="content">
                     <p style="font-family: 'Inter2';">
                         Terapia voltada para o equilíbrio da
