--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
 <!--Opções do cabeçalho-->
-<div class="navigation_header">
+<div class="navigation_header"> <!-- z-index é o que o site vai carregar primeiro -->
         <a class="btn btn-header" style="z-index:999" href="#sectionhome">Home</a>
         <a class="btn btn-header" style="z-index:999" href="#sectionserv">Serviços</a>
         <a class="btn btn-header" style="z-index:999" href="#beneficios">Benefícios</a>
@@ -139,7 +139,7 @@
     </div>
 </section>
 
-<!---SOBRE-->
+<!-- SOBRE -->
 <section id="sobre">
     <div style="display: flex; gap: 30px; align-items: flex-start; padding-right: 60px;">
         <div style="padding-left: 60px; padding-right: 0px">
@@ -167,10 +167,9 @@
     </div>
 </section>
 
-
+    <!-- RODAPÉ -->
     <footer class="rodape" id="footer">
             <div class="rodape-container">
-            <!-- LADO ESQUERDO -->
             <div class="contato" id="contato">
                 <p style="font-family: Inter;">Contato:</p>
                 <p><i class="fa-solid fa-phone"></i> (17) 99618-5992</p>
@@ -188,7 +187,6 @@
                 </div>
             </div>
 
-            <!-- LADO DIREITO -->
             <div class="endereco" id="endereco">
                 <p>Rua Marechal Deodoro da Fonseca, 1917</p>
                 <p>Clínica Vita e Salute, São José do Rio Preto - SP, CEP: 15025-070</p>
@@ -196,12 +194,15 @@
             </div>
         </footer>
         </div>
+     
+    <!-- Botão Whatsapp -->    
     <div class="whatsapp-float">
         <a href="https://wa.me/5517996185992?text=Oi%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20%F0%9F%A4%8D" target="_blank" class="whatsapp-btn">
             <i class="fa-brands fa-whatsapp"></i>
-            <span class="pulse"></span>
+            <span class="pulse"></span> 
         </a>
     </div>
+
 </body>
 </html>
 
